[gd_scene load_steps=4 format=3 uid="uid://w61j5pg3dnfv"]

[ext_resource type="Script" path="res://scripts/pillar.gd" id="1_lolv6"]
[ext_resource type="Texture2D" uid="uid://bu7ldqi1qg1bf" path="res://assets/structures/pillar.png" id="2_kl3oo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7o5b3"]
size = Vector2(55.25, 130.5)

[node name="Pillar" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource("1_lolv6")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_kl3oo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.625, -0.25)
shape = SubResource("RectangleShape2D_7o5b3")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-2, 0)
shape = SubResource("RectangleShape2D_7o5b3")

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(-2, 0)
shape = SubResource("RectangleShape2D_7o5b3")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
